Refactor slides and update requirements for students and professors; enhance styles and controls

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         
         <div id="controls">
-            <button id="print-btn" onclick="exportToPDF()">📄 Exportar PDF</button>
-            <button id="fullscreen-btn" onclick="toggleFullscreen()">⛶ Pantalla Completa</button>
+            <button id="print-btn" onclick="exportToPDF()">📄 PDF</button>
+            <button id="fullscreen-btn" onclick="toggleFullscreen()">⛶</button>
         </div>
     </div>
 
