Refactor navigation and event handling; improve slide management and add logging

--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
         </div>
         
         <div id="navigation">
-            <button id="prev-btn" onclick="previousSlide()">‹ Anterior</button>
+            <button id="prev-btn">‹ Anterior</button>
             <span id="slide-counter">1 / 6</span>
-            <button id="next-btn" onclick="nextSlide()">Siguiente ›</button>
+            <button id="next-btn">Siguiente ›</button>
         </div>
         
         <div id="controls">
-            <button id="print-btn" onclick="exportToPDF()">📄 PDF</button>
-            <button id="fullscreen-btn" onclick="toggleFullscreen()">⛶</button>
+            <button id="print-btn">📄 PDF</button>
+            <button id="fullscreen-btn">⛶</button>
         </div>
     </div>
 
+    <script src="libs/navigo.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
