--- a/slides/01-introduccion.html
+++ b/slides/01-introduccion.html
@@ -8,6 +8,6 @@
 
 <p><em>Sugerencia de imagen: Logo de GitHub Copilot junto con el escudo de la UNSJ</em></p>
 
-<p>Presentado por: [Tu nombre]<br>
+<p>Presentado por: Emilio Ormeño<br>
 Facultad de Ciencias Exactas, Físicas y Naturales<br>
 Universidad Nacional de San Juan</p>
