Refactor code structure for improved readability and maintainability

--- a/slides/05b-proceso-solicitud.html
+++ b/slides/05b-proceso-solicitud.html
@@ -1,4 +1,4 @@
-<div class="slide-centered-image">
+<div class="slide-centered-image-qr">
     <div class="slide-content">
         <h2>Proceso de Solicitud</h2>
 
@@ -22,6 +22,6 @@
     </div>
     
     <div>
-        <img src="images/proceso-solicitud.jpeg" alt="Screenshot del sitio GitHub Education" class="slide-image">
+        <img src="images/qr-formulario.png" alt="QR Code para formulario de GitHub Education" class="slide-image-qr">
     </div>
 </div>
